@@ -5,9 +5,10 @@ HLStats ChangeLog
 *) New: Design styles (css) updated.
 *) New: Zombie Panic! Source had no weapon pics
 *) Changed: New Rank section in player detail page. #37
+*) Updated: blue.css and default.css small design changes
 *) Fixed: old weapon images converted to png
 *) Fixed: #34
-*) Updated: blue.css and default.css small design changes
+*) Fixed: number format error in player detail page
 
 1.61 (2011-03-08)
 *) New: New css style blue.css
